@@ -10,7 +10,6 @@ use Crypt::Misc qw(encode_b58b decode_b58b);
 use Bitcoin::Crypto::Helpers qw(new_bigint hash256 verify_bytestring);
 use Bitcoin::Crypto::Exception;
 
-
 our @EXPORT_OK = qw(
 	encode_base58
 	encode_base58check
