@@ -4,19 +4,59 @@ our $VERSION = "0.996";
 
 use v5.10;
 use warnings;
-use parent "Throwable::Error";
+use Moo;
+use Types::Standard qw(Maybe Str ArrayRef);
 
 use namespace::clean;
 
+use overload
+	q{""} => "as_string",
+	fallback => 1;
+
+has 'message' => (
+	is => 'ro',
+	isa => Str,
+	required => 1,
+);
+
+has 'caller' => (
+	is => 'ro',
+	isa => Maybe [ArrayRef],
+	default => sub {
+		for my $call_level (1 .. 10) {
+			my ($package, $file, $line) = caller $call_level;
+			if (defined $package && $package !~ /^Bitcoin::Crypto/) {
+				return [$package, $file, $line];
+			}
+		}
+		return undef;
+	},
+	init_arg => undef,
+);
 
 sub raise
 {
-	shift->throw(@_);
+	my ($self, $error) = @_;
+
+	unless (ref $self) {
+		$self = $self->new(message => $error);
+	}
+
+	die $self;
+}
+
+sub throw
+{
+	goto \&raise;
 }
 
 sub trap_into
 {
 	my ($class, $sub) = @_;
+
+	# make sure we use class name
+	$class = ref $class
+		if ref $class;
 
 	my $ret;
 	my $error = do {
@@ -30,10 +70,25 @@ sub trap_into
 	};
 
 	if ($error) {
-		$class->throw($error);
+
+		# make sure we stringify the error
+		$class->throw("$error");
 	}
 
 	return $ret;
+}
+
+sub as_string
+{
+	my ($self) = @_;
+
+	my $raised = $self->message;
+	$raised =~ s/\s$//g;
+	my $caller = $self->caller;
+	if (defined $caller) {
+		$raised .= ' (raised at ' . $caller->[1] . ', line ' . $caller->[2] . ')';
+	}
+	return 'An error occured in Bitcoin subroutines: ' . $raised;
 }
 
 {
@@ -153,11 +208,29 @@ Bitcoin::Crypto::Exception - Exception class for Bitcoin::Crypto purposes
 
 =head1 DESCRIPTION
 
-A wrapper class with automatic stringification and standarized raising using Throwable::Error.
+A wrapper class with automatic stringification and standarized raising.
 Contains many other inline packages that identify parts that went wrong (like Bitcoin::Crypto::Exception::KeySign for errors in signature generation).
 See individual Bitcoin::Crypto packages documentation to see the exception classes to check for extra control flow when needed.
 
 =head1 FUNCTIONS
+
+=head2 message
+
+	sig: message($self)
+
+Returns the error message (a string).
+
+=head2 caller
+
+	sig: caller($self)
+
+Returns an array ref containing: package name, file name and line number (same as C<[caller()]> perl expression). It will contain the data for the first code from outside Bitcoin::Crypto which called it. May be undefined if it cannot find a calling source.
+
+=head2 as_string
+
+	sig: as_string($self)
+
+Stringifies the error, using the I<message>, I<caller> and some extra text for context.
 
 =head2 raise
 
