@@ -10,7 +10,6 @@ use Types::Common::Numeric qw(assert_PositiveInt);
 use Types::Standard qw(Int InstanceOf);
 use Math::BigInt 1.999808 try => 'LTM,GMP';
 
-
 __PACKAGE__->add_type(
 	name => "IntMaxBits",
 	parent => InstanceOf->of("Math::BigInt"),
